# d12

./: .gitignore  CMakeLists.txt  README.md
Assets/: At_Droid_back_diffuse.tga  At_Droid_back_normal.tga  At_Droid_top_diffuse.tga  At_Droid_top_normal.tga
Examples/DXR/: CMakeLists.txt  README.md
Examples/DXR/include/: DXRApp.h
Examples/DXR/shaders/: Common.hlsl  Global.hlsl  Hit.hlsl  Miss.hlsl  RayGen.hlsl  ReflectionHit.hlsl
Examples/DXR/src/: DXRApp.cpp  DXRApp.h  main.cpp
Examples/DynamicIndexing/: CMakeLists.txt  README.md
Examples/DynamicIndexing/include/: DynamicIndexingApp.h
Examples/DynamicIndexing/shaders/: simple.hlsl
Examples/DynamicIndexing/src/: DynamicIndexingApp.cpp  main.cpp
Examples/Glow/: CMakeLists.txt  README.md
Examples/Glow/include/: Blur.h  GlowApp.h  Shared.h  SingleColor.h
Examples/Glow/shaders/: finalRender.hlsl  singleColor.hlsl  singlePassBlur.hlsl
Examples/Glow/src/: Blur.cpp  Blur.h  GlowApp.cpp  Shared.h  SingleColor.cpp  SingleColor.h  main.cpp
Examples/MarchingCubes/: CMakeLists.txt  README.md
Examples/MarchingCubes/include/: MarchingCubes.h  MarchingCubesApp.h
Examples/MarchingCubes/shaders/: simple.hlsl
Examples/MarchingCubes/src/: MarchingCubes.cpp  MarchingCubes.h  MarchingCubesApp.cpp  MarchingCubesApp.h  main.cpp
Examples/Minimal/: README.md
Examples/Minimal/include/: MinimalApp.h
Examples/Minimal/shaders/: simple.hlsl
Examples/Minimal/src/: MinimalApp.cpp  main.cpp
Examples/MotionBlur/: CMakeLists.txt  README.md
Examples/MotionBlur/include/: MotionBlurApp.h  MotionVector.h  ObjectRender.h
Examples/MotionBlur/shaders/: motionBlur.hlsl  motionVector.hlsl
Examples/MotionBlur/src/: MotionBlurApp.cpp  MotionVector.cpp  MotionVector.h  ObjectRender.cpp  Shared.h  main.cpp
Examples/RWTexture/: CMakeLists.txt  README.md
Examples/RWTexture/shaders/: blit.hlsl  block_greyscale.hlsl
Examples/RWTexture/src/: RWTextureApp.cpp  RWTextureApp.h  main.cpp
Framework/: CMakeLists.txt
Framework/include/fw/: API.h  Application.h  Camera.h  CameraController.h  Common.h  Framework.h  Macros.h  Mesh.h  Transformation.h  Window.h
Framework/src/: API.cpp  Camera.cpp  CameraController.cpp  Common.cpp  Framework.cpp  Mesh.cpp  Model.cpp  Transformation.cpp  Window.cpp
src/: main.cpp
